# c_compiler

./: .dockerignore  .gitignore  CMakeLists.txt  Compiler.cpp  Compiler.hpp  Dockerfile  LangTypes.hpp  SymbolTable.cpp  SymbolTable.hpp  a.out  compile_test.sh  compiler.cpp  compiler.hpp  docs.txt  grammar.txt  main.cpp  run_container.sh  symbol_table.hpp  symtab_utils.cpp  symtab_utils.hpp
backend/: code_gen.cpp  code_gen.hpp  code_gen_expr.cpp  code_gen_internal.cpp  code_gen_internal.hpp  code_gen_utils.cpp  code_gen_utils.hpp  code_gen_variable.cpp  cpu.cpp  cpu.hpp  symbol_table.hpp  system_v_abi.hpp
examples/: addition.sael  assignment_test.c  basic_arithmetic.c  call_test.c  compares.c  decl.c  declaration.c  declaration.sael  expr.c  expr.sael  float_assginment.c  float_assignment.c  fn.c  function.c  function.sael  hw.c  ifs.c  lexer_stress_test.c  preprocessor_test.c  ptr.c  ptr.sael  run_tests.sh  statement.c  statement.sael  struct.c  structs.c  tesfile.c  testfile.c  types.c
examples/verified/: struct.ll
frontend/: AstNode.hpp  CodeGen.cpp  CodeGen.hpp  Expression.hpp  ExpressionTypes.hpp  Lexer.cpp  Lexer.hpp  NodeExecutor.cpp  NodeExecutor.hpp  Parser.cpp  Parser.hpp  Preprocessor.cpp  Preprocessor.hpp  SemaTypes.hpp  SemanticAnalysis.cpp  SemanticAnalysis.hpp  TokenTypes.hpp  TypedNumber.hpp  node_allocator.cpp  node_allocator.hpp  parse_declaration.cpp  parse_statements.cpp  parser.cpp  parser.hpp  parser_expressions.cpp  parser_internal.cpp  parser_internal.hpp  parser_utils.cpp  parser_utils.hpp  scanner.cpp  scanner.hpp  token.hpp
include/: compiler.hpp
include/backend/: code_generator.hpp  code_generator_utils.hpp
include/frontend/: parser.hpp  parser_utils.hpp  scanner.hpp  token_types.hpp
scripts/: run_tests.sh
src/: CMakeLists.txt  compiler.cpp  main.cpp
src/backend/: code_generator.cpp  code_generator_decl.cpp  code_generator_utils.cpp  code_generator_variable.cpp
src/frontend/: declaration_parser.cpp  expression_parser.cpp  parser.cpp  parser_utils.cpp  scanner.cpp  statement_parser.cpp
test/: assignment.test  assignmentTest.c  conditionTest.c  conditionTest.test  conditiont.test  declaration.test  declarationTest.c  expression.test  expressionTest.c  function.test  functionTest.c  loops.test  loopsTest.c  scannerTest  testDeclaration.test  testFile.test  testLoops.test  test_expression.test
test/callTest/: compatibility.c  test_functioncall.py
test/scannerTests/: scannerTest.cpp  test_scanner.py
tests/: basic_arithmetic.ll  decl.ll  fn.ll  hw.ll  preprocessor_test.ll  statement.ll  struct.ll  test_lexer.cpp  test_lexer_2.cpp  test_preprocessor.cpp  testfile.ll
tests/expr_test/: expr_test.cpp  expr_test.py
utils/: CompilationOpts.cpp  CompilationOpts.hpp  DataEncoder.cpp  DataEncoder.hpp  FileManager.cpp  FileManager.hpp  Logger.cpp  Logger.hpp  Misc.cpp  Misc.hpp  PagedHeap.cpp  PagedHeap.hpp
